refactorization of Images service
