# gen/http/images/server/paths.go
@@ -1,23 +1,0 @@
-// Code generated by goa v3.2.3, DO NOT EDIT.
-//
-// HTTP request path constructors for the Images service.
-//
-// Command:
-// $ goa gen image-loader/design
-
-package server
-
-// LoadNewSatelliteImageImagesPath returns the URL path to the Images service Load new satellite image HTTP endpoint.
-func LoadNewSatelliteImageImagesPath() string {
-	return "/image-loader/api/v1/images"
-}
-
-// GetRawSatelliteImageImagesPath returns the URL path to the Images service Get raw satellite image HTTP endpoint.
-func GetRawSatelliteImageImagesPath() string {
-	return "/image-loader/api/v1/images"
-}
-
-// LoadNewProcessedSatelliteImageImagesPath returns the URL path to the Images service Load new processed satellite image HTTP endpoint.
-func LoadNewProcessedSatelliteImageImagesPath() string {
-	return "/image-loader/api/v1/images/processed"
-}
