# gen/http/raw_images/server/encode_decode.go
@@ -1,6 +1,6 @@
 // Code generated by goa v3.2.3, DO NOT EDIT.
 //
-// Images HTTP server encoders and decoders
+// Raw images HTTP server encoders and decoders
 //
 // Command:
 // $ goa gen image-loader/design
@@ -9,8 +9,8 @@ package server
 
 import (
 	"context"
-	images "image-loader/gen/images"
-	imagesviews "image-loader/gen/images/views"
+	rawimages "image-loader/gen/raw_images"
+	rawimagesviews "image-loader/gen/raw_images/views"
 	"io"
 	"net/http"
 
@@ -18,24 +18,24 @@ import (
 	goa "goa.design/goa/v3/pkg"
 )
 
-// EncodeLoadNewSatelliteImageResponse returns an encoder for responses
-// returned by the Images Load new satellite image endpoint.
-func EncodeLoadNewSatelliteImageResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
+// EncodeLoadNewRawSatelliteImageResponse returns an encoder for responses
+// returned by the Raw images Load new raw satellite image endpoint.
+func EncodeLoadNewRawSatelliteImageResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
 	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
-		res := v.(*imagesviews.GoaResult)
+		res := v.(*rawimagesviews.GoaResult)
 		enc := encoder(ctx, w)
-		body := NewLoadNewSatelliteImageResponseBody(res.Projected)
+		body := NewLoadNewRawSatelliteImageResponseBody(res.Projected)
 		w.WriteHeader(http.StatusOK)
 		return enc.Encode(body)
 	}
 }
 
-// DecodeLoadNewSatelliteImageRequest returns a decoder for requests sent to
-// the Images Load new satellite image endpoint.
-func DecodeLoadNewSatelliteImageRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
+// DecodeLoadNewRawSatelliteImageRequest returns a decoder for requests sent to
+// the Raw images Load new raw satellite image endpoint.
+func DecodeLoadNewRawSatelliteImageRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
 	return func(r *http.Request) (interface{}, error) {
 		var (
-			body LoadNewSatelliteImageRequestBody
+			body LoadNewRawSatelliteImageRequestBody
 			err  error
 		)
 		err = decoder(r).Decode(&body)
@@ -45,15 +45,15 @@ func DecodeLoadNewSatelliteImageRequest(mux goahttp.Muxer, decoder func(*http.Re
 			}
 			return nil, goa.DecodePayloadError(err.Error())
 		}
-		payload := NewLoadNewSatelliteImageRawSatelliteImage(&body)
+		payload := NewLoadNewRawSatelliteImageRawSatelliteImage(&body)
 
 		return payload, nil
 	}
 }
 
-// EncodeLoadNewSatelliteImageError returns an encoder for errors returned by
-// the Load new satellite image Images endpoint.
-func EncodeLoadNewSatelliteImageError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder, formatter func(err error) goahttp.Statuser) func(context.Context, http.ResponseWriter, error) error {
+// EncodeLoadNewRawSatelliteImageError returns an encoder for errors returned
+// by the Load new raw satellite image Raw images endpoint.
+func EncodeLoadNewRawSatelliteImageError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder, formatter func(err error) goahttp.Statuser) func(context.Context, http.ResponseWriter, error) error {
 	encodeError := goahttp.ErrorEncoder(encoder, formatter)
 	return func(ctx context.Context, w http.ResponseWriter, v error) error {
 		en, ok := v.(ErrorNamer)
@@ -68,7 +68,7 @@ func EncodeLoadNewSatelliteImageError(encoder func(context.Context, http.Respons
 			if formatter != nil {
 				body = formatter(res)
 			} else {
-				body = NewLoadNewSatelliteImageBadRequestResponseBody(res)
+				body = NewLoadNewRawSatelliteImageBadRequestResponseBody(res)
 			}
 			w.Header().Set("goa-error", "BadRequest")
 			w.WriteHeader(http.StatusBadRequest)
@@ -80,7 +80,7 @@ func EncodeLoadNewSatelliteImageError(encoder func(context.Context, http.Respons
 			if formatter != nil {
 				body = formatter(res)
 			} else {
-				body = NewLoadNewSatelliteImageInternalErrorResponseBody(res)
+				body = NewLoadNewRawSatelliteImageInternalErrorResponseBody(res)
 			}
 			w.Header().Set("goa-error", "InternalError")
 			w.WriteHeader(http.StatusInternalServerError)
@@ -92,10 +92,10 @@ func EncodeLoadNewSatelliteImageError(encoder func(context.Context, http.Respons
 }
 
 // EncodeGetRawSatelliteImageResponse returns an encoder for responses returned
-// by the Images Get raw satellite image endpoint.
+// by the Raw images Get raw satellite image endpoint.
 func EncodeGetRawSatelliteImageResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
 	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
-		res := v.(*imagesviews.GoaResult)
+		res := v.(*rawimagesviews.GoaResult)
 		enc := encoder(ctx, w)
 		body := NewGetRawSatelliteImageResponseBody(res.Projected)
 		w.WriteHeader(http.StatusOK)
@@ -104,7 +104,7 @@ func EncodeGetRawSatelliteImageResponse(encoder func(context.Context, http.Respo
 }
 
 // DecodeGetRawSatelliteImageRequest returns a decoder for requests sent to the
-// Images Get raw satellite image endpoint.
+// Raw images Get raw satellite image endpoint.
 func DecodeGetRawSatelliteImageRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
 	return func(r *http.Request) (interface{}, error) {
 		var (
@@ -125,7 +125,7 @@ func DecodeGetRawSatelliteImageRequest(mux goahttp.Muxer, decoder func(*http.Req
 }
 
 // EncodeGetRawSatelliteImageError returns an encoder for errors returned by
-// the Get raw satellite image Images endpoint.
+// the Get raw satellite image Raw images endpoint.
 func EncodeGetRawSatelliteImageError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder, formatter func(err error) goahttp.Statuser) func(context.Context, http.ResponseWriter, error) error {
 	encodeError := goahttp.ErrorEncoder(encoder, formatter)
 	return func(ctx context.Context, w http.ResponseWriter, v error) error {
@@ -165,7 +165,8 @@ func EncodeGetRawSatelliteImageError(encoder func(context.Context, http.Response
 }
 
 // EncodeLoadNewProcessedSatelliteImageResponse returns an encoder for
-// responses returned by the Images Load new processed satellite image endpoint.
+// responses returned by the Raw images Load new processed satellite image
+// endpoint.
 func EncodeLoadNewProcessedSatelliteImageResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
 	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
 		w.WriteHeader(http.StatusOK)
@@ -174,7 +175,7 @@ func EncodeLoadNewProcessedSatelliteImageResponse(encoder func(context.Context, 
 }
 
 // DecodeLoadNewProcessedSatelliteImageRequest returns a decoder for requests
-// sent to the Images Load new processed satellite image endpoint.
+// sent to the Raw images Load new processed satellite image endpoint.
 func DecodeLoadNewProcessedSatelliteImageRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
 	return func(r *http.Request) (interface{}, error) {
 		var (
@@ -199,7 +200,7 @@ func DecodeLoadNewProcessedSatelliteImageRequest(mux goahttp.Muxer, decoder func
 }
 
 // EncodeLoadNewProcessedSatelliteImageError returns an encoder for errors
-// returned by the Load new processed satellite image Images endpoint.
+// returned by the Load new processed satellite image Raw images endpoint.
 func EncodeLoadNewProcessedSatelliteImageError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder, formatter func(err error) goahttp.Statuser) func(context.Context, http.ResponseWriter, error) error {
 	encodeError := goahttp.ErrorEncoder(encoder, formatter)
 	return func(ctx context.Context, w http.ResponseWriter, v error) error {
@@ -238,14 +239,14 @@ func EncodeLoadNewProcessedSatelliteImageError(encoder func(context.Context, htt
 	}
 }
 
-// unmarshalGeographicInformationRequestBodyToImagesGeographicInformation
-// builds a value of type *images.GeographicInformation from a value of type
+// unmarshalGeographicInformationRequestBodyToRawimagesGeographicInformation
+// builds a value of type *rawimages.GeographicInformation from a value of type
 // *GeographicInformationRequestBody.
-func unmarshalGeographicInformationRequestBodyToImagesGeographicInformation(v *GeographicInformationRequestBody) *images.GeographicInformation {
+func unmarshalGeographicInformationRequestBodyToRawimagesGeographicInformation(v *GeographicInformationRequestBody) *rawimages.GeographicInformation {
 	if v == nil {
 		return nil
 	}
-	res := &images.GeographicInformation{
+	res := &rawimages.GeographicInformation{
 		TagName: v.TagName,
 	}
 	if v.Coordinates != nil {
@@ -260,14 +261,14 @@ func unmarshalGeographicInformationRequestBodyToImagesGeographicInformation(v *G
 	return res
 }
 
-// unmarshalNormalizedIndexesRequestBodyToImagesNormalizedIndexes builds a
-// value of type *images.NormalizedIndexes from a value of type
+// unmarshalNormalizedIndexesRequestBodyToRawimagesNormalizedIndexes builds a
+// value of type *rawimages.NormalizedIndexes from a value of type
 // *NormalizedIndexesRequestBody.
-func unmarshalNormalizedIndexesRequestBodyToImagesNormalizedIndexes(v *NormalizedIndexesRequestBody) *images.NormalizedIndexes {
+func unmarshalNormalizedIndexesRequestBodyToRawimagesNormalizedIndexes(v *NormalizedIndexesRequestBody) *rawimages.NormalizedIndexes {
 	if v == nil {
 		return nil
 	}
-	res := &images.NormalizedIndexes{}
+	res := &rawimages.NormalizedIndexes{}
 	if v.Ndvi != nil {
 		res.Ndvi = make([]float64, len(v.Ndvi))
 		for i, val := range v.Ndvi {
