# gen/http/raw_images/server/paths.go
@@ -1,0 +1,23 @@
+// Code generated by goa v3.2.3, DO NOT EDIT.
+//
+// HTTP request path constructors for the Raw images service.
+//
+// Command:
+// $ goa gen image-loader/design
+
+package server
+
+// LoadNewRawSatelliteImageRawImagesPath returns the URL path to the Raw images service Load new raw satellite image HTTP endpoint.
+func LoadNewRawSatelliteImageRawImagesPath() string {
+	return "/image-loader/api/v1/raw-images"
+}
+
+// GetRawSatelliteImageRawImagesPath returns the URL path to the Raw images service Get raw satellite image HTTP endpoint.
+func GetRawSatelliteImageRawImagesPath() string {
+	return "/image-loader/api/v1/raw-images"
+}
+
+// LoadNewProcessedSatelliteImageRawImagesPath returns the URL path to the Raw images service Load new processed satellite image HTTP endpoint.
+func LoadNewProcessedSatelliteImageRawImagesPath() string {
+	return "/image-loader/api/v1/raw-images/processed"
+}
