# gen/http/raw_images/server/server.go
@@ -1,6 +1,6 @@
 // Code generated by goa v3.2.3, DO NOT EDIT.
 //
-// Images HTTP server
+// Raw images HTTP server
 //
 // Command:
 // $ goa gen image-loader/design
@@ -9,17 +9,17 @@ package server
 
 import (
 	"context"
-	images "image-loader/gen/images"
+	rawimages "image-loader/gen/raw_images"
 	"net/http"
 
 	goahttp "goa.design/goa/v3/http"
 	goa "goa.design/goa/v3/pkg"
 )
 
-// Server lists the Images service endpoint HTTP handlers.
+// Server lists the Raw images service endpoint HTTP handlers.
 type Server struct {
 	Mounts                         []*MountPoint
-	LoadNewSatelliteImage          http.Handler
+	LoadNewRawSatelliteImage       http.Handler
 	GetRawSatelliteImage           http.Handler
 	LoadNewProcessedSatelliteImage http.Handler
 }
@@ -41,14 +41,14 @@ type MountPoint struct {
 	Pattern string
 }
 
-// New instantiates HTTP handlers for all the Images service endpoints using
-// the provided encoder and decoder. The handlers are mounted on the given mux
-// using the HTTP verb and path defined in the design. errhandler is called
-// whenever a response fails to be encoded. formatter is used to format errors
-// returned by the service methods prior to encoding. Both errhandler and
-// formatter are optional and can be nil.
+// New instantiates HTTP handlers for all the Raw images service endpoints
+// using the provided encoder and decoder. The handlers are mounted on the
+// given mux using the HTTP verb and path defined in the design. errhandler is
+// called whenever a response fails to be encoded. formatter is used to format
+// errors returned by the service methods prior to encoding. Both errhandler
+// and formatter are optional and can be nil.
 func New(
-	e *images.Endpoints,
+	e *rawimages.Endpoints,
 	mux goahttp.Muxer,
 	decoder func(*http.Request) goahttp.Decoder,
 	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
@@ -57,48 +57,49 @@ func New(
 ) *Server {
 	return &Server{
 		Mounts: []*MountPoint{
-			{"LoadNewSatelliteImage", "POST", "/image-loader/api/v1/images"},
-			{"GetRawSatelliteImage", "GET", "/image-loader/api/v1/images"},
-			{"LoadNewProcessedSatelliteImage", "POST", "/image-loader/api/v1/images/processed"},
+			{"LoadNewRawSatelliteImage", "POST", "/image-loader/api/v1/raw-images"},
+			{"GetRawSatelliteImage", "GET", "/image-loader/api/v1/raw-images"},
+			{"LoadNewProcessedSatelliteImage", "POST", "/image-loader/api/v1/raw-images/processed"},
 		},
-		LoadNewSatelliteImage:          NewLoadNewSatelliteImageHandler(e.LoadNewSatelliteImage, mux, decoder, encoder, errhandler, formatter),
+		LoadNewRawSatelliteImage:       NewLoadNewRawSatelliteImageHandler(e.LoadNewRawSatelliteImage, mux, decoder, encoder, errhandler, formatter),
 		GetRawSatelliteImage:           NewGetRawSatelliteImageHandler(e.GetRawSatelliteImage, mux, decoder, encoder, errhandler, formatter),
 		LoadNewProcessedSatelliteImage: NewLoadNewProcessedSatelliteImageHandler(e.LoadNewProcessedSatelliteImage, mux, decoder, encoder, errhandler, formatter),
 	}
 }
 
 // Service returns the name of the service served.
-func (s *Server) Service() string { return "Images" }
+func (s *Server) Service() string { return "Raw images" }
 
 // Use wraps the server handlers with the given middleware.
 func (s *Server) Use(m func(http.Handler) http.Handler) {
-	s.LoadNewSatelliteImage = m(s.LoadNewSatelliteImage)
+	s.LoadNewRawSatelliteImage = m(s.LoadNewRawSatelliteImage)
 	s.GetRawSatelliteImage = m(s.GetRawSatelliteImage)
 	s.LoadNewProcessedSatelliteImage = m(s.LoadNewProcessedSatelliteImage)
 }
 
-// Mount configures the mux to serve the Images endpoints.
+// Mount configures the mux to serve the Raw images endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
-	MountLoadNewSatelliteImageHandler(mux, h.LoadNewSatelliteImage)
+	MountLoadNewRawSatelliteImageHandler(mux, h.LoadNewRawSatelliteImage)
 	MountGetRawSatelliteImageHandler(mux, h.GetRawSatelliteImage)
 	MountLoadNewProcessedSatelliteImageHandler(mux, h.LoadNewProcessedSatelliteImage)
 }
 
-// MountLoadNewSatelliteImageHandler configures the mux to serve the "Images"
-// service "Load new satellite image" endpoint.
-func MountLoadNewSatelliteImageHandler(mux goahttp.Muxer, h http.Handler) {
+// MountLoadNewRawSatelliteImageHandler configures the mux to serve the "Raw
+// images" service "Load new raw satellite image" endpoint.
+func MountLoadNewRawSatelliteImageHandler(mux goahttp.Muxer, h http.Handler) {
 	f, ok := h.(http.HandlerFunc)
 	if !ok {
 		f = func(w http.ResponseWriter, r *http.Request) {
 			h.ServeHTTP(w, r)
 		}
 	}
-	mux.Handle("POST", "/image-loader/api/v1/images", f)
+	mux.Handle("POST", "/image-loader/api/v1/raw-images", f)
 }
 
-// NewLoadNewSatelliteImageHandler creates a HTTP handler which loads the HTTP
-// request and calls the "Images" service "Load new satellite image" endpoint.
-func NewLoadNewSatelliteImageHandler(
+// NewLoadNewRawSatelliteImageHandler creates a HTTP handler which loads the
+// HTTP request and calls the "Raw images" service "Load new raw satellite
+// image" endpoint.
+func NewLoadNewRawSatelliteImageHandler(
 	endpoint goa.Endpoint,
 	mux goahttp.Muxer,
 	decoder func(*http.Request) goahttp.Decoder,
@@ -107,14 +108,14 @@ func NewLoadNewSatelliteImageHandler(
 	formatter func(err error) goahttp.Statuser,
 ) http.Handler {
 	var (
-		decodeRequest  = DecodeLoadNewSatelliteImageRequest(mux, decoder)
-		encodeResponse = EncodeLoadNewSatelliteImageResponse(encoder)
-		encodeError    = EncodeLoadNewSatelliteImageError(encoder, formatter)
+		decodeRequest  = DecodeLoadNewRawSatelliteImageRequest(mux, decoder)
+		encodeResponse = EncodeLoadNewRawSatelliteImageResponse(encoder)
+		encodeError    = EncodeLoadNewRawSatelliteImageError(encoder, formatter)
 	)
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "Load new satellite image")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "Images")
+		ctx = context.WithValue(ctx, goa.MethodKey, "Load new raw satellite image")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "Raw images")
 		payload, err := decodeRequest(r)
 		if err != nil {
 			if err := encodeError(ctx, w, err); err != nil {
@@ -135,8 +136,8 @@ func NewLoadNewSatelliteImageHandler(
 	})
 }
 
-// MountGetRawSatelliteImageHandler configures the mux to serve the "Images"
-// service "Get raw satellite image" endpoint.
+// MountGetRawSatelliteImageHandler configures the mux to serve the "Raw
+// images" service "Get raw satellite image" endpoint.
 func MountGetRawSatelliteImageHandler(mux goahttp.Muxer, h http.Handler) {
 	f, ok := h.(http.HandlerFunc)
 	if !ok {
@@ -144,11 +145,12 @@ func MountGetRawSatelliteImageHandler(mux goahttp.Muxer, h http.Handler) {
 			h.ServeHTTP(w, r)
 		}
 	}
-	mux.Handle("GET", "/image-loader/api/v1/images", f)
+	mux.Handle("GET", "/image-loader/api/v1/raw-images", f)
 }
 
 // NewGetRawSatelliteImageHandler creates a HTTP handler which loads the HTTP
-// request and calls the "Images" service "Get raw satellite image" endpoint.
+// request and calls the "Raw images" service "Get raw satellite image"
+// endpoint.
 func NewGetRawSatelliteImageHandler(
 	endpoint goa.Endpoint,
 	mux goahttp.Muxer,
@@ -165,7 +167,7 @@ func NewGetRawSatelliteImageHandler(
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
 		ctx = context.WithValue(ctx, goa.MethodKey, "Get raw satellite image")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "Images")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "Raw images")
 		payload, err := decodeRequest(r)
 		if err != nil {
 			if err := encodeError(ctx, w, err); err != nil {
@@ -187,7 +189,7 @@ func NewGetRawSatelliteImageHandler(
 }
 
 // MountLoadNewProcessedSatelliteImageHandler configures the mux to serve the
-// "Images" service "Load new processed satellite image" endpoint.
+// "Raw images" service "Load new processed satellite image" endpoint.
 func MountLoadNewProcessedSatelliteImageHandler(mux goahttp.Muxer, h http.Handler) {
 	f, ok := h.(http.HandlerFunc)
 	if !ok {
@@ -195,11 +197,11 @@ func MountLoadNewProcessedSatelliteImageHandler(mux goahttp.Muxer, h http.Handle
 			h.ServeHTTP(w, r)
 		}
 	}
-	mux.Handle("POST", "/image-loader/api/v1/images/processed", f)
+	mux.Handle("POST", "/image-loader/api/v1/raw-images/processed", f)
 }
 
 // NewLoadNewProcessedSatelliteImageHandler creates a HTTP handler which loads
-// the HTTP request and calls the "Images" service "Load new processed
+// the HTTP request and calls the "Raw images" service "Load new processed
 // satellite image" endpoint.
 func NewLoadNewProcessedSatelliteImageHandler(
 	endpoint goa.Endpoint,
@@ -217,7 +219,7 @@ func NewLoadNewProcessedSatelliteImageHandler(
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
 		ctx = context.WithValue(ctx, goa.MethodKey, "Load new processed satellite image")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "Images")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "Raw images")
 		payload, err := decodeRequest(r)
 		if err != nil {
 			if err := encodeError(ctx, w, err); err != nil {
