# gen/raw_images/endpoints.go
@@ -1,11 +1,11 @@
 // Code generated by goa v3.2.3, DO NOT EDIT.
 //
-// Images endpoints
+// Raw images endpoints
 //
 // Command:
 // $ goa gen image-loader/design
 
-package images
+package rawimages
 
 import (
 	"context"
@@ -13,35 +13,35 @@ import (
 	goa "goa.design/goa/v3/pkg"
 )
 
-// Endpoints wraps the "Images" service endpoints.
+// Endpoints wraps the "Raw images" service endpoints.
 type Endpoints struct {
-	LoadNewSatelliteImage          goa.Endpoint
+	LoadNewRawSatelliteImage       goa.Endpoint
 	GetRawSatelliteImage           goa.Endpoint
 	LoadNewProcessedSatelliteImage goa.Endpoint
 }
 
-// NewEndpoints wraps the methods of the "Images" service with endpoints.
+// NewEndpoints wraps the methods of the "Raw images" service with endpoints.
 func NewEndpoints(s Service) *Endpoints {
 	return &Endpoints{
-		LoadNewSatelliteImage:          NewLoadNewSatelliteImageEndpoint(s),
+		LoadNewRawSatelliteImage:       NewLoadNewRawSatelliteImageEndpoint(s),
 		GetRawSatelliteImage:           NewGetRawSatelliteImageEndpoint(s),
 		LoadNewProcessedSatelliteImage: NewLoadNewProcessedSatelliteImageEndpoint(s),
 	}
 }
 
-// Use applies the given middleware to all the "Images" service endpoints.
+// Use applies the given middleware to all the "Raw images" service endpoints.
 func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
-	e.LoadNewSatelliteImage = m(e.LoadNewSatelliteImage)
+	e.LoadNewRawSatelliteImage = m(e.LoadNewRawSatelliteImage)
 	e.GetRawSatelliteImage = m(e.GetRawSatelliteImage)
 	e.LoadNewProcessedSatelliteImage = m(e.LoadNewProcessedSatelliteImage)
 }
 
-// NewLoadNewSatelliteImageEndpoint returns an endpoint function that calls the
-// method "Load new satellite image" of service "Images".
-func NewLoadNewSatelliteImageEndpoint(s Service) goa.Endpoint {
+// NewLoadNewRawSatelliteImageEndpoint returns an endpoint function that calls
+// the method "Load new raw satellite image" of service "Raw images".
+func NewLoadNewRawSatelliteImageEndpoint(s Service) goa.Endpoint {
 	return func(ctx context.Context, req interface{}) (interface{}, error) {
 		p := req.(*RawSatelliteImage)
-		res, err := s.LoadNewSatelliteImage(ctx, p)
+		res, err := s.LoadNewRawSatelliteImage(ctx, p)
 		if err != nil {
 			return nil, err
 		}
@@ -51,7 +51,7 @@ func NewLoadNewSatelliteImageEndpoint(s Service) goa.Endpoint {
 }
 
 // NewGetRawSatelliteImageEndpoint returns an endpoint function that calls the
-// method "Get raw satellite image" of service "Images".
+// method "Get raw satellite image" of service "Raw images".
 func NewGetRawSatelliteImageEndpoint(s Service) goa.Endpoint {
 	return func(ctx context.Context, req interface{}) (interface{}, error) {
 		p := req.(*GetRawSatelliteImagePayload)
@@ -65,7 +65,8 @@ func NewGetRawSatelliteImageEndpoint(s Service) goa.Endpoint {
 }
 
 // NewLoadNewProcessedSatelliteImageEndpoint returns an endpoint function that
-// calls the method "Load new processed satellite image" of service "Images".
+// calls the method "Load new processed satellite image" of service "Raw
+// images".
 func NewLoadNewProcessedSatelliteImageEndpoint(s Service) goa.Endpoint {
 	return func(ctx context.Context, req interface{}) (interface{}, error) {
 		p := req.(*ProcessedSatelliteImage)
