# gen/raw_images/views/view.go
@@ -1,6 +1,6 @@
 // Code generated by goa v3.2.3, DO NOT EDIT.
 //
-// Images views
+// Raw images views
 //
 // Command:
 // $ goa gen image-loader/design
